# academic_data_download

./: .gitignore  CRSP.py  Link_table.ipynb  Sanity_factors.py  TAQ.py  combine_all.py  combine_ind_factors.py  compute_factors.py  compute_pricevol.py  compute_ravenpack.py  glossary.json  pyproject.toml  readme.md  sanity_check.py  test.py
artifacts/: tpci_description
data/Macro variables/: 10yTreasury.xlsx  3mTreasury.xlsx  ConsumerPriceIndex.xlsx  CreditSpread.xlsx  CrudeOil.xlsx  IndustrialProductionIndex.xlsx
db_manager/: wrds_sql.py
factors_lab/: assembly_line.py
playground/: test.py  test_on_financial_ratio_wrds.py  wrds_structure.py
src/: combine.ipynb  combine_all.py  combine_ind_factors.py  combine_pt.py  combine_taq.py  compute_analysts_estimate.py  compute_factors.py  compute_pricevol.py  compute_taq.py
src/academic_data_download/db_manager/: wrds_sql.py
src/academic_data_download/factors_lab/: analyst_estimation_builder.py  assembly_line.py  factor_builder.py  pricevol_builder.py  ravenpack_builder.py  taq_builder.py
src/academic_data_download/pricevol/: assembly_line.py
src/academic_data_download/sql_inventory/: crsp_dsf.sql.j2
src/academic_data_download/sql_inventory/analyst_estimation/: eps_detail.sql.j2  price_target.sql.j2  price_target_summary.sql.j2
src/academic_data_download/utils/: col_transform.py  merger.py  necessary_cond_calculation.py  save_file.py  sql_execution.py  wrds_connect.py
utils/: clean.py  col_transform.py  merger.py  necessary_cond_calculation.py  save_file.py  sneak_peek.py
(+14 files in other folders)
