[project]
name = "finance-research"
version = "0.1.0"
description = "Academic research data"
requires-python = ">=3.9"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "SQLAlchemy>=2.0.0",
    "wrds>=3.0.0",
    "python-dotenv==1.1.1",
    "fastparquet==2024.11.0",
    "tqdm>=4.67.1"
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["db_manager*","utils*","factors_lab*"]